# tinysfml

./: CMakeLists.txt  CMakeLists.txt.in
include/tiny/sfml/gfx/: renderer.h  sprite.h  texture.h
include/tiny/sfml/system/: frc.h  window.h
src/: CMakeLists.txt
src/gfx/: CMakeLists.txt  meta.cpp  renderer.cpp  sprite.cpp  texture.cpp
src/sfx/: CMakeLists.txt
src/system/: CMakeLists.txt  frc.cpp  meta.cpp  window.cpp
test/: CMakeLists.txt  main.cpp
